# psychopy-mcp

./: .gitignore  .mcp.json  LICENSE  QUICK_START.md  README.md  TOOLS_REFERENCE.md  install.bat  install.ps1  pyproject.toml
psychopy_mcp/: __init__.py  analysis.py  cli.py  paths.py  server.py  web.py
psychopy_mcp/frontend/: launcher.py
psychopy_mcp/paradigms/: __init__.py  ant.py  base.py  custom.py  deception.py  dotprobe.py  engine.py  flanker.py  gonogo.py  lexdecision.py  mentalrotation.py  nback.py  posner.py  simon.py  sternberg.py  stopsignal.py  stroop.py  taskswitch.py  visualsearch.py
psychopy_mcp/runner/: live_session.py
psychopy_mcp/templates/: coder_experiment.py  experiment.psyexp
tests/: test_paradigms.py
